# textual_textarea

./: main.py  pyproject.toml
textual_textarea/: __init__.py  _buffer.py  _textarea.py
