[tool.poetry]
name = "textual-textarea"
version = "0.1.0"
description = ""
authors = ["Ben Larisch <benlarisch2019@gmail.com>"]
readme = "README.md"
packages = [{include = "textual_textarea"}]

[tool.poetry.dependencies]
python = "^3.7"
textual = "^0.27.0"

[tool.poetry.group.dev.dependencies]
python = "^3.7"
textual = {extras = ["dev"], version = "^0.27.0"}
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
